objects/Global_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Global configuration setting</description>
    <fields>
        <fullName>CPQ_Mute_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPQ Mute Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mute_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To skip the triggers</description>
        <label>Mute Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mute_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To skip validation rules</description>
        <label>Mute Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mute_Workflow_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To skip workflow rules</description>
        <label>Mute Workflow Rule</label>
        <type>Checkbox</type>
    </fields>
    <label>Global Config</label>
</CustomObject>